Solved minor content err

--- a/tcet-profile/index.html
+++ b/tcet-profile/index.html
@@ -208,7 +208,7 @@
                 <li>Computer Networking</li>
                 <li>Internet of Things</li>
                 <li>Cryptography & Networking Security</li> 
-                <li>Cryptography Graphics</li> 
+                <li>Computer Graphics</li> 
               </ol>
               <br/>
               <strong class="midboldtxtblue">ACHIEVEMENTS:</strong>
